--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<script src="script.js"></script>
+<script src="https://cdn.solana.com/solana-web3.js"></script>
 <link rel="stylesheet" href="styles.css">
 <head>
   <title>Solana Coin Flip</title>
